infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sastaspace
  labels:
    app.kubernetes.io/part-of: sastaspace
